[package]
name = "polytron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = "0.4.0-alpha.9"
glam = "0.25.0"
egui = { version = "0.22.0", features = ["bytemuck"] }
egui_tiles = "0.7.2"
egui-miniquad = { git = "https://github.com/not-fl3/egui-miniquad.git", branch = "miniquad_0.4" }
